set up an express app and made a dummy visualization

--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -3,9 +3,13 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/javascripts/create_visualization.js"></script>
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+	<svg id="visualisation" width="1000" height="500"></svg>
   </body>
 </html>
