can add point to d3 graph

--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -10,6 +10,8 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+  <button id="show_visualization">Show Graph</button>
 	<svg id="visualisation" width="1000" height="500"></svg>
+
   </body>
 </html>
