--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -5,9 +5,22 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/javascripts/d3legend.js"></script>
   <script type="text/javascript" src="/javascripts/create_visualization.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
 
+<style>
+
+body {
+  font: 10px sans-serif;
+}
+
+.legend rect {
+  fill:white;
+  stroke:black;
+  opacity:0.8;}
+
+</style>
 </head>
 <body>
   <h1><%= title %></h1>
@@ -29,7 +42,7 @@
 
       <div class="checkbox">
         <label class="btn btn-default active">
-          <input type="checkbox" checked="checked" id='<%= candidates[i] %>' value=""><%= candidates[i] %> 
+          <input type="checkbox" checked="checked" id='<%= candidates[i] %>' value="<%= candidates[i]%> "><%= candidates[i] %> 
         </label>
       </div>
               <% } %>
