--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -6,15 +6,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   <script type="text/javascript" src="/javascripts/create_visualization.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+  <script type="text/javscript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 </head>
 <body>
   <h1><%= title %></h1>
   <p>Welcome to <%= title %></p>
     Start time: <input type="text" id="start" value = '1449360000000'>
-  End time: <input type="text" id="end" value = '1449361000000'>
-  Interval: <select id = "interval"> min
+    End time: <input type="text" id="end" value = '1449361000000'>
+    Interval: <select id = "interval"> min
   <option value=5>5</option>
   <option value=10>10</option>
   <option value=15>15</option>
@@ -29,15 +29,15 @@
     <div class="btn-group" data-toggle="buttons">
       <% for(var i=0; i<candidates.length; i++) { %>
 
-      <div class="checkbox">
-        <label class="btn btn-default active">
-          <input type="checkbox" checked="checked" id='<%= candidates[i] %>' value=""><%= candidates[i] %> 
+      <div class="radio">
+        <label class="btn btn-default">
+          <input type="radio" id='<%= candidates[i] %>' value="<%= i %> " name="candidateButton"><%= candidates[i] %> 
         </label>
       </div>
-              <% } %>
-            </div>
+      <% } %>
+    </div>
 
 
-          </ul>
-        </body>
+  </ul>
+</body>
 </html>
