added inc count button

--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -36,6 +36,7 @@
       </div>
       <% } %>
         <button id="get_inc_avg">Get Incremental Average</button><span id="inc_avg"></span>
+        <button id="get_inc_count">Get Incremental Count</button><span id="inc_count"></span>
     </div>
 
 
