fixed pie chart stuff

--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -21,8 +21,8 @@
 <body>
   <h1>Twitter Mentions for 2016 Presidential Candidates</h1>
   <p>This is a visualization showing the number of times each major 2016 presidential candidate is mentioned on Twitter within 5-minute periods throughout the day. Select a candidate to begin.</p>
-    Start time: <input type="text" id="start" value = '1449331500000'>
-    End time: <input type="text" id="end" value = '1449331800000'>
+    Start time: <input type="text" id="start" value = '1449464100000'>1449331500000'
+    End time: <input type="text" id="end" value = '1449468900000'>'1449331800000'
     Interval: <select id = "interval"> min
   <option value=5>5</option>
   <option value=10>10</option>
