--- a/visualization/views/index.ejs
+++ b/visualization/views/index.ejs
@@ -9,6 +9,10 @@
   <script type="text/javascript" src="/javascripts/d3legend.js"></script>
   <script type="text/javscript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+  <script src="/javascripts/jquery.js"></script> 
+<script src="/javascripts/moment.min.js"></script> 
+<script src="/javascripts/combodate.js"></script> 
+
 <style>
 
 .legend rect {
@@ -21,8 +25,11 @@
 <body>
   <h1>Twitter Mentions for 2016 Presidential Candidates</h1>
   <p>This is a visualization showing the number of times each major 2016 presidential candidate is mentioned on Twitter within 5-minute periods throughout the day. Select a candidate to begin.</p>
-    Start time: <input type="text" id="start" value = '1449464100000'>1449331500000'
-    End time: <input type="text" id="end" value = '1449468900000'>'1449331800000'
+   <!-- Start time: <input type="text" id="start" value = '1449464100000'>1449331500000'-->
+   <!--<input name="date_of_birth" value="15-05" data-format="DD-MM" data-template="D MMM YYYY"> -->
+<b>Start Time:</b><input type="text" id="datetime24" data-format="MM-DD-YYYY HH:mm" data-template="MM / DD / YYYY     HH : mm" name="datetime" value="12-07-2015 04:55">
+<b>End Time: </b><input type="text" id="datetime24end" data-format="MM-DD-YYYY HH:mm" data-template="MM / DD / YYYY     HH : mm" name="datetime" value="12-07-2015 10:50">
+   <!-- End time: <input type="text" id="end" value = '1449468900000'>'1449331800000'-->
     Interval: <select id = "interval"> min
   <option value=5>5</option>
   <option value=10>10</option>
